syntax = "proto3";

option csharp_namespace = "Users";

service GrpcUser {
  rpc SignIn(SignInRequest) returns (SignInResponse);
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  bool isSucceeded = 1;
  string id = 2;
  string email = 3;
}